--- a/docs/projectSetup.mdx
+++ b/docs/projectSetup.mdx
@@ -1,8 +1,7 @@
 ---
-sidebar_position: 1
+title: Project setup
+sidebar_position: 3
 ---
-
-# Project setup
 
 Once we have our tooling set up, we can initialize our project. If a Rojo project is already present, this is not necessary!
 
