--- a/docs/regularUse.mdx
+++ b/docs/regularUse.mdx
@@ -1,8 +1,7 @@
 ---
-sidebar_position: 2
+title: Regular use
+sidebar_position: 4
 ---
-
-# Regular use
 
 The regular work cycle in a fully managed Rojo project generally involves the following steps:
 
