Clarify --assets-directory

--- a/docs/regularUse.mdx
+++ b/docs/regularUse.mdx
@@ -40,7 +40,7 @@ DataModel/
 ```
 
 :::tip
-By using `--assets-directory DataModel` as an argument to the command, scripts and model files can be in the same base directory.
+By using `--assets-directory <Folder name>` as an argument to the command, scripts and model files can be in separate directories.
 :::
 
 ### Extracting models only
