--- a/docs/regularUse.mdx
+++ b/docs/regularUse.mdx
@@ -67,7 +67,7 @@ By using `--assets-directory <Folder name>` as an argument to the command, scrip
 rostar unpack ./Path_To_Place_File.rbxl --no-lua
 ```
 
-If Rostar is only used for extracting models, `--no-overwrite-project-file` should be used as well for preserving the existing script paths. Edits to the project file might be needed if new directories are added.
+If Rostar is only used for extracting models, `--no-overwrite-project` should be used as well for preserving the existing script paths. Edits to the project file might be needed if new directories are added. More on this in the [Rojo-first workflow](<../Workflow guides/rojoFirst>) article.
 
 ### Extracting scripts only
 
